--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav  mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Platform</a>
+                                <a class="nav-link active" aria-current="page" href="platform.html">Platform</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle d-flex align-items-center gap-1" href="#"
@@ -110,8 +110,7 @@
                     <div class="text-center d-flex flex-column row-gap-4">
                         <h3 class="home__hero__section--title mb-0">#1 AI Customer Experience. Made in Kuwait.</h3>
                         <p class="home__hero__section--subtitle mb-0">
-                            Pair helps companies build branded customer facing Al agents.
-                            Fluent in every language and works 24/7
+                            Pair helps companies build seamless, branded customer experiences with AI.
                         </p>
                     </div>
                 </div>
