--- a/home.html
+++ b/home.html
@@ -78,7 +78,7 @@
                                     class="nav-link btn btn-link btn-lang d-block text-decoration-none p-0 text-start">العربية</a>
                             </li>
                             <li class="d-lg-none d-block">
-                                <a href="customers.html"
+                                <a href="contact.html"
                                     class="btn read__more d-flex align-items-center justify-content-center gap-2 w-100">
                                     <span>Submit</span>
                                 </a>
@@ -93,9 +93,10 @@
                         </button>
                         <a type="button"
                             class="d-lg-block d-none btn btn-link btn-lang text-decoration-none p-0">العربية</a>
-                        <a href="customers.html"
+                        <a href="contact.html"
                             class="d-lg-flex  btn read__more d-none align-items-center justify-content-center gap-2">
-                            <span>Submit</span>
+                            <span>Discover more</span>
+                            <img src="assets/image/icons/arrow.svg" alt="image"/>
                         </a>
                     </div>
                 </div>
@@ -127,49 +128,49 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-box d-flex align-items-center justify-content-center">
-                            <img height="75" class="img-fluid" src="assets/image/logo/client-logo-one.svg"
+                            <img height="70" class="img-fluid" src="assets/image/logo/client-logo-one.svg"
                                 alt="image" />
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-box d-flex align-items-center justify-content-center">
-                            <img height="75" class="img-fluid" src="assets/image/logo/client-logo-two.svg"
+                            <img height="70" class="img-fluid" src="assets/image/logo/client-logo-two.svg"
                                 alt="image" />
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-box d-flex align-items-center justify-content-center">
-                            <img height="75" class="img-fluid" src="assets/image/logo/client-logo-one.svg"
+                            <img height="70" class="img-fluid" src="assets/image/logo/client-logo-one.svg"
                                 alt="image" />
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-box d-flex align-items-center justify-content-center">
-                            <img height="75" class="img-fluid" src="assets/image/logo/client-logo-two.svg"
+                            <img height="70" class="img-fluid" src="assets/image/logo/client-logo-two.svg"
                                 alt="image" />
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-box d-flex align-items-center justify-content-center">
-                            <img height="75" class="img-fluid" src="assets/image/logo/client-logo-one.svg"
+                            <img height="70" class="img-fluid" src="assets/image/logo/client-logo-one.svg"
                                 alt="image" />
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-box d-flex align-items-center justify-content-center">
-                            <img height="75" class="img-fluid" src="assets/image/logo/client-logo-two.svg"
+                            <img height="70" class="img-fluid" src="assets/image/logo/client-logo-two.svg"
                                 alt="image" />
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-box d-flex align-items-center justify-content-center">
-                            <img height="75" class="img-fluid" src="assets/image/logo/client-logo-one.svg"
+                            <img height="70" class="img-fluid" src="assets/image/logo/client-logo-one.svg"
                                 alt="image" />
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-box d-flex align-items-center justify-content-center">
-                            <img height="75" class="img-fluid" src="assets/image/logo/client-logo-two.svg"
+                            <img height="70" class="img-fluid" src="assets/image/logo/client-logo-two.svg"
                                 alt="image" />
                         </div>
                     </div>
@@ -208,7 +209,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <div class="service__details__text">
-                        <div class="item d-flex gap-3">
+                        <div class="item d-flex align-items-baseline gap-3">
                             <img height="18" src="assets/image/icons/ai.svg" alt="icon">
                             <div class="d-flex flex-column row-gap-2">
                                 <h4 class="mb-0">Your own AI agent</h4>
@@ -216,7 +217,7 @@
                                     instantly, and scales support without extra hires.</p>
                             </div>
                         </div>
-                        <div class="item d-flex gap-3">
+                        <div class="item d-flex align-items-baseline gap-3">
                             <img height="18" src="assets/image/icons/set.svg" alt="icon">
                             <div class="d-flex flex-column row-gap-2">
                                 <h4 class="mb-0">Set strict guardrails</h4>
@@ -224,7 +225,7 @@
                                     point, and answers only within your approved scope.</p>
                             </div>
                         </div>
-                        <div class="item d-flex gap-3">
+                        <div class="item d-flex align-items-baseline gap-3">
                             <img height="18" src="assets/image/icons/exchange-data.svg" alt="icon">
                             <div class="d-flex flex-column row-gap-2">
                                 <h4 class="mb-0">Seamlessly exchange data</h4>
@@ -232,7 +233,6 @@
                                     reflect the latest business context.</p>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -245,14 +245,17 @@
                 <div class="row row-gap-3 align-items-center">
                     <div class="col-lg-7 col-md-7">
                         <div
-                            class="full__story--content d-flex flex-column row-gap-4 align-items-start justify-content-start">
+                            class="full__story--content d-flex flex-column row-gap-4 align-items-start justify-content-start w-100">
                             <img height="63" class="d-block mb-1 img-fluid" src="assets/image/logo/college-logo.svg"
                                 alt="image" />
+                            <div class="full__story__mainimg d-md-none d-flex justify-content-end overflow-hidden w-100">
+                                <img class="img-fluid  h-100" src="assets/image/global-img/college-woman.png" alt="image" />
+                            </div>
                             <p class="mb-0">
                                 “Hessa is a milestone for CCK. And a proof that AI can elevate student experience and
                                 staff efficiency. Grateful to Pair for their expert, dedicated support!”
                             </p>
-                            <h4 class="name mb-0 d-flex flex-wrap gap-2">
+                            <h4 class="name mb-0 d-flex align-items-center flex-wrap gap-2">
                                 <span>Rawaa Saud Jafar</span>
                                 <span class="job-title">Marketing Manager</span>
                             </h4>
@@ -264,7 +267,7 @@
                     </div>
                     <!---->
                     <div class="col-lg-5 col-md-5">
-                        <div class="full__story__mainimg d-flex justify-content-end overflow-hidden">
+                        <div class="full__story__mainimg d-md-flex d-none justify-content-end overflow-hidden ">
                             <img class="img-fluid  h-100" src="assets/image/global-img/college-woman.png" alt="image" />
                         </div>
                     </div>
@@ -388,8 +391,8 @@
                         Handling thousands of customers daily.
                     </p>
                 </div>
-                <a href="customers.html" class="btn read__more d-flex align-items-center justify-content-center gap-2">
-                    <span>Submit</span>
+                <a href="Partners.html" class="btn read__more d-flex align-items-center justify-content-center gap-2">
+                    <span>Partners</span>
                 </a>
             </div>
             <!---->
@@ -398,21 +401,20 @@
                     <a href="customer-details.html" class="all__customers__card h-100 d-flex flex-column row-gap-3">
                         <div class="image-part overflow-hidden position-relative">
                             <img class="w-100 h-100" src="assets/image/global-img/customer-two.png" alt="image" />
-                            <!-- <img height="75" class="Logo__image" src="assets/image/global-img/logo-image.png"
+                            <!-- <img height="70" class="Logo__image" src="assets/image/global-img/logo-image.png"
                                 alt="image" /> -->
                             <div
                                 class="rate__section d-flex flex-wrap gap-3 align-items-center justify-content-between">
-                                <div class="d-flex flex-column row-gap-2">
+                                <div class="d-flex flex-column row-gap-1">
                                     <span class="title text-capitalize">Resolution Rate</span>
-                                    <span class="value">74%</span>
-                                </div>
-                                <div class="d-flex flex-column row-gap-2">
-                                    <span class="title text-capitalize">Resolution Rate</span>
-                                    <span class="value">74%</span>
+                                    <span class="value d-flex align-items-center gap-2">
+                                        <img height="7" src="assets/image/icons/arrow-progress.svg" alt="icon"/>
+                                        <span>74%</span>
+                                    </span>
                                 </div>
                             </div>
                         </div>
-                        <div class="text-part d-flex flex-column row-gap-2">
+                        <div class="text-part d-flex flex-column row-gap-1">
                             <p class="mb-0">How CCK redefines student engagement and support with Pair.</p>
                         </div>
                     </a>
@@ -422,17 +424,20 @@
                     <a href="customer-details.html" class="all__customers__card h-100 d-flex flex-column row-gap-3">
                         <div class="image-part overflow-hidden position-relative">
                             <img class="w-100 h-100" src="assets/image/global-img/customer-one.png" alt="image" />
-                            <!-- <img height="75" class="Logo__image" src="assets/image/global-img/logo-image.png"
+                            <!-- <img height="70" class="Logo__image" src="assets/image/global-img/logo-image.png"
                                 alt="image" /> -->
                             <div
                                 class="rate__section d-flex flex-wrap gap-3 align-items-center justify-content-between">
-                                <div class="d-flex flex-column row-gap-2">
-                                    <span class="title text-capitalize">Resolution Rate</span>
-                                    <span class="value">74%</span>
+                                <div class="d-flex flex-column row-gap-1">
+                                    <span class="title text-capitalize">Students</span>
+                                    <span class="value">50 Thousand</span>
                                 </div>
-                                <div class="d-flex flex-column row-gap-2">
+                                <div class="d-flex flex-column row-gap-1">
                                     <span class="title text-capitalize">Resolution Rate</span>
-                                    <span class="value">74%</span>
+                                    <span class="value d-flex align-items-center gap-2">
+                                        <img height="7" src="assets/image/icons/arrow-progress.svg" alt="icon"/>
+                                        <span>74%</span>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -483,7 +488,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__top">
-                <div class="row row-gap-4">
+                <div class="row row-gap-5">
                     <div class="col-lg col-sm-12">
                         <a href="home.html">
                             <img width="80" src="assets/image/logo/Logo.svg" alt="Logo" />
