--- a/Partners.html
+++ b/Partners.html
@@ -225,7 +225,7 @@
         </div>
     </section>
     <!-- All customers -->
-    <section class="all__customers">
+    <section class="all__customers pt-3">
         <div class="container">
             <div class="mb-5 row d-flex flex-wrap row-gap-3 column-gap-4 align-items-center justify-content-between">
                 <div class="col-lg-6 all__customers--title d-flex flex-column row-gap-2">
@@ -249,16 +249,17 @@
                                 alt="image" /> -->
                             <div
                                 class="rate__section d-flex flex-wrap gap-3 align-items-center justify-content-between">
-                                <div class="d-flex flex-column row-gap-1">
+                                <div class="d-flex flex-column row-gap-2">
                                     <span class="title text-capitalize">Resolution Rate</span>
-                                    <span class="value d-flex align-items-center gap-2">
-                                        <img height="7" src="assets/image/icons/arrow-progress.svg" alt="icon" />
-                                        <span>74%</span>
-                                    </span>
+                                    <span class="value">74%</span>
+                                </div>
+                                <div class="d-flex flex-column row-gap-2">
+                                    <span class="title text-capitalize">Resolution Rate</span>
+                                    <span class="value">74%</span>
                                 </div>
                             </div>
                         </div>
-                        <div class="text-part d-flex flex-column row-gap-1">
+                        <div class="text-part d-flex flex-column row-gap-2">
                             <p class="mb-0">How CCK redefines student engagement and support with Pair.</p>
                         </div>
                     </a>
@@ -272,16 +273,13 @@
                                 alt="image" /> -->
                             <div
                                 class="rate__section d-flex flex-wrap gap-3 align-items-center justify-content-between">
-                                <div class="d-flex flex-column row-gap-1">
-                                    <span class="title text-capitalize">Students</span>
-                                    <span class="value">50 Thousand</span>
-                                </div>
-                                <div class="d-flex flex-column row-gap-1">
+                                <div class="d-flex flex-column row-gap-2">
                                     <span class="title text-capitalize">Resolution Rate</span>
-                                    <span class="value d-flex align-items-center gap-2">
-                                        <img height="7" src="assets/image/icons/arrow-progress.svg" alt="icon" />
-                                        <span>74%</span>
-                                    </span>
+                                    <span class="value">74%</span>
+                                </div>
+                                <div class="d-flex flex-column row-gap-2">
+                                    <span class="title text-capitalize">Resolution Rate</span>
+                                    <span class="value">74%</span>
                                 </div>
                             </div>
                         </div>
@@ -332,7 +330,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__top">
-                <div class="row row-gap-5">
+                <div class="row row-gap-4">
                     <div class="col-lg col-sm-12">
                         <a href="home.html">
                             <img width="80" src="assets/image/logo/Logo.svg" alt="Logo" />
