--- a/home.html
+++ b/home.html
@@ -34,7 +34,8 @@
     <!-- Header -->
     <!-- ============================================================== -->
     <header>
-        <div class="container-fluid">
+        <!--change here-->
+        <div class="container-fluid max-w-(--breakpoint-3xl)">
             <nav class="navbar navbar-expand-lg p-0">
                 <div class="d-flex align-items-center justify-content-between w-100">
                     <a class="navbar-brand m-0" href="home.html">
@@ -117,7 +118,8 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <!--change here-->
+        <div class="container-fluid max-w-(--breakpoint-3xl)">
             <img class="w-100" src="assets/image/global-img/hero-home.png" alt="img" />
         </div>
     </section>
@@ -209,7 +211,8 @@
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <div class="service__details__text">
-                        <div class="item d-flex align-items-baseline gap-3">
+                        <!--change here-->
+                        <div class="item d-flex align-items-start gap-3">
                             <img height="18" src="assets/image/icons/ai.svg" alt="icon">
                             <div class="d-flex flex-column row-gap-2">
                                 <h4 class="mb-0">Your own AI agent</h4>
@@ -217,7 +220,8 @@
                                     instantly, and scales support without extra hires.</p>
                             </div>
                         </div>
-                        <div class="item d-flex align-items-baseline gap-3">
+                        <!--change here-->
+                        <div class="item d-flex align-items-start gap-3">
                             <img height="18" src="assets/image/icons/set.svg" alt="icon">
                             <div class="d-flex flex-column row-gap-2">
                                 <h4 class="mb-0">Set strict guardrails</h4>
@@ -225,7 +229,8 @@
                                     point, and answers only within your approved scope.</p>
                             </div>
                         </div>
-                        <div class="item d-flex align-items-baseline gap-3">
+                        <!--change here-->
+                        <div class="item d-flex align-items-start gap-3">
                             <img height="18" src="assets/image/icons/exchange-data.svg" alt="icon">
                             <div class="d-flex flex-column row-gap-2">
                                 <h4 class="mb-0">Seamlessly exchange data</h4>
